buttons changes colors when hovering

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 
     <div class="container">
       <div class="box">
+        <img src="./images/icon-star.svg" alt="icon-star" />
+
+        <img src="./images/icon-star.svg" alt="icon-star" />
         <div class="header">
           <h1>How did we do?</h1>
           <p>
@@ -53,14 +56,16 @@
             feedback is appreciated to help us improve our offering!
           </p>
         </div>
+        <div class="starCircle"></div>
 
         <div class="btn1"><span>1</span></div>
-        <div class="btn2"><span>2</span></div>
+        <div class="btn2" ><span>2</span></div>
         <div class="btn3"><span>3</span></div>
         <div class="btn4"><span>4</span></div>
         <div class="btn5"><span>5</span></div>
         <div class="submit"><span>Submit</span></div>
       </div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
